# Pacman

./: .gitignore  CMakeLists.txt
include/: movable.h  moveable.h
include/gui/: colors.h  game_board.h
include/object/: movable.h  paintable.h
src/: main.cpp  movable.cpp
src/gui/: game_board.cpp  main.cpp
src/object/: movable.cpp  paintable.cpp
